--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.kunio.wanandroidclient"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,33 +25,33 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:28.+'
-    compile 'com.android.support:support-v4:28.+'
-    compile 'com.android.support:design:28.+'
-    compile 'com.android.support.constraint:constraint-layout:1.1.2'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     // progress
-    compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
+    implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     // net
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.9'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     // banner
-    compile 'com.youth.banner:banner:1.4.10'
+    implementation 'com.youth.banner:banner:1.4.10'
     //  glide -- okhttp
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar'
 //    compile 'com.android.support:cardview-v7:26.0.0-beta1'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.hyman:flowlayout-lib:1.1.2'
-    compile 'com.just.agentweb:agentweb:3.1.0'
-    compile 'org.greenrobot:eventbus:3.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.hyman:flowlayout-lib:1.1.2'
+    implementation 'com.just.agentweb:agentweb:3.1.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
